Revert "test ajout pipeline 2"
This reverts commit 26c6cdd8ff7e5995bc93be14a3bea3a20bd32c35.

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@ name: Laravel
 
 on:
   push:
-    branches: [ "TestPipeline" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
