--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,14 +2,14 @@ name: Laravel
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "Pipeline" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
   laravel-tests:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
@@ -24,12 +24,4 @@ jobs:
       run: php artisan key:generate
     - name: permissions du répertoire
       run: chmod -R 777 storage bootstrap/cache
-    - name: création de la base
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execution des tests via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+
