--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,14 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      - uses: actions/checkout@v4
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-      - uses: actions/checkout@v4
-      - name: Copy composer.json
-        run: cp Lamanager/Lamanager/composer.json /home/runner/work/Lamanager/Lamanager/composer.json
       - name: Set up working directory
-        run: cd /home/runner/work/Lamanager/Lamanager
+        run: cd Lamanager/Lamanager
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Installation de dépendances
