--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: chemin
+        run: cd /home/runner/work/Lamanager/Lamanager
       - uses: actions/checkout@v4
       - uses: shivammathur/setup-php@v2
         with:
@@ -18,6 +20,8 @@ jobs:
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
+      - name: Installation de dépendances
+        run: composer install
       - name: Generation de la clée
         run: php artisan key:generate
       - name: permissions du répertoire
