--- a/Lamanager/package.json
+++ b/Lamanager/package.json
@@ -6,6 +6,9 @@
         "dev": "vite",
         "test": "jest"
     },
+    "jest": {
+        "testEnvironment": "jsdom"
+    },
     "devDependencies": {
         "@babel/preset-env": "^7.26.7",
         "@babel/preset-react": "^7.26.3",
@@ -22,6 +25,7 @@
         "concurrently": "^9.0.1",
         "esm": "^3.2.25",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "react": "^18.3.1",
