--- a/Lamanager/package.json
+++ b/Lamanager/package.json
@@ -21,6 +21,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "jspdf": "^2.5.2",
+        "jspdf-autotable": "^3.8.4",
         "lucide-react": "^0.454.0",
         "react-google-charts": "^5.2.1",
         "victory": "^37.3.5"
